fix: long test name without breaks leads to overflow in tree

--- a/packages/web-components/src/components/Tree/styles.scss
+++ b/packages/web-components/src/components/Tree/styles.scss
@@ -57,6 +57,7 @@
   display: flex;
   align-items: flex-start;
   margin-right: auto;
+  word-break: break-word;
 }
 
 .test-count {
